Navbar bug fixes: Displays properly when screen size is changed; Shows full navbar on tablets; Added shadow

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -5,4 +5,8 @@ $link: #7298C4;
 $light: #F9F9F8;
 $dark: #212C38;
 
+// Allow full navbar on tablet
+@import "~bulma/sass/utilities/initial-variables.sass";
+$navbar-breakpoint: $tablet;
+
 @import '~bulma/bulma.sass';
